2000-07-01  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_view_menu_sensitivity): set the sensitivity
	of the revert menu item

	* view.c (gedit_view_changed_cb): set sentivity of the add/remove view
	menu

	* dialogs/dialog-prefs.c (apply_cb): we where not setting tab_pos.
	set tab pos after apply.

2000-06-30    <chema@celorio.com>

	* plugin.h (struct _PluginData): add long_desc

	* dialogs/dialog-plugins.c: 
	(gedit_plugin_manager_item_clicked): use pd->long_desc v.s. pd->desc

2000-06-30    <chema@celorio.com>

	* dialogs/dialog-plugins.c: find a work arround for the crash.

2000-06-29  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_set_title): fix leak.

2000-06-29  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-plugins.c: remove g_print's

	* document.c: Do not free docname. back Charles commit.

2000-06-29  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_add_cb): call set_view_menu_sensitivity after adding a view
	(gedit_view_remove): call set_view_menu_sensitivity after removing a view

	* plugin.c (gedit_plugin_load): add installed_by_default code.
	* plugin.h (struct _PluginData): ditto

2000-06-29  Charles Kerr <charles@skywalker.ou.edu>

	* document.c (gedit_document_set_title): small memory leak fixed:
	g_free docname before exiting the function

2000-06-28  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-plugins.c (gedit_plugin_manager_item_clicked): add the plugin description
	in the plugin manager when the plugin name is clicked.

2000-06-27  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_load_widgets): fix a ugly piece of code.

	* window.c (gedit_window_set_view_menu_sensitivity): new function.

2000-06-26  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugin_save_settings): save the plugins that are installed

	* prefs.c (gedit_prefs_save_settings): call gedit_plugin_save_settings

2000-06-26  Chema Celorio  <chema@celorio.com>
