@@ -1,3 +1,9 @@
+2000-07-02    <phoenix@nova.es>
+
+	* search.c (count_lines_cb): This function is reform . add file_info ()
+	* search.c (file_info): Add new function . Return -> total chars , total
+	words , total lines , total paragraphs ....
+
 2000-07-01  Chema Celorio  <chema@celorio.com>
 
 	* window.c (gedit_window_set_view_menu_sensitivity): set the sensitivity
